# differ_helper

./: Cargo.toml  Makefile  README.md  RELEASE.md  Reviewer_prompt.md
.github/workflows/: ci.yml  release.yml
src/: extract.rs  ident.rs  lang.rs  main.rs  output.rs  security.rs
src/langs/: ADDING_LANGUAGES.md  c.rs  cpp.rs  cs.rs  css.rs  go.rs  haskell.rs  java.rs  jsts.rs  kotlin.rs  lua.rs  masm.rs  mod.rs  nim.rs  objc.rs  php.rs  python.rs  ruby.rs  rust.rs  shell.rs  sql.rs  swift.rs  terraform.rs  yaml.rs  zig.rs
src/tests/: ident_test.rs  lang_test.rs  main_test.rs  output_test.rs  security_test.rs
src/tests/langs/: c_test.rs  cpp_test.rs  css_test.rs  go_test.rs  haskell_test.rs  jsts_test.rs  masm_test.rs  nim_test.rs  python_test.rs  rust_test.rs  sql_test.rs  zig_test.rs
