[package]
name         = "differ_helper"
version      = "0.1.0"
edition      = "2021"
description  = "Parse git unified diff and extract variables, functions, and tests from added lines"
license      = "MIT"
repository   = "https://github.com/afa7789/differ_helper"
rust-version = "1.90"

[workspace]

[dependencies]
rayon = "1"
